[package]
name = "nzm-visual"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
dxgi-capture-rs = "1.2.1"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
score_log = []

[profile.dev]
opt-level = 0
